--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 fastapi==0.70.1
 numpy==1.19.5
-opencv_python==4.5.4.60
 Pillow==8.4.0
-requests==2.25.1
+pydantic==1.8.2
 tensorflow-cpu==2.6.2
 tensorflow_hub==0.12.0
 uvicorn==0.15.0
-python-multipart==0.0.5
